-------------------------------------------------------------------------------------------------------
Release notes version 1.8.1_beta : Enhancements, modifications and corrected bugs since version 1.8.0 :
-------------------------------------------------------------------------------------------------------
29/01/20 (TRUST)  New feature : New option thermique_monolithique (VDF only) for Scheme_Euler_Implicit keyword to enable full thermal impliciting for coupled problems (single matrix solved)
23/01/20 (Tools)  New feature : Add merge_meds.py python script to merge MED files in parallel into single one
21/01/20 (TRUST)  Output      : Change of .son file format (header, column alignment, precision_impr by default 8 and not 3 as before) + add gnuplot_header option to have a gnuplot5 compatible header
07/01/20 (TRUST)  Tools       : Trust Wizard tool becomes obsolete
07/01/20 (TRUST)  Tools       : MED-file 4.0.0 insures direct compatibility with Salome 9.2
07/01/20 (TRUST)  Tools       : Update versions for MEDCoupling (9.4.0), MED-file (4.0.0), HDF (1.10.3), Gmsh (4.4.1)
07/01/20 (TRUST)  Tools       : Switch to Python 3. Python 2 scripts are not supported anymore
06/01/20 (TRUST)  Portabilit06y : AMD partition Rome on irene CCRT cluster is supported (built with Intel 19.0.5 & IntelMPI 2018.0.3)
16/12/19 (TRUST)  New keyword : Add Champ_front_debit_QC_VDF_fonc_t keyword to set time-dependent flow rates in quasi-compressible flows with VDF discretization
05/12/19 (TRUST)  New feature : Add possibility to post-process Y_PLUS on moving boundaries in VEF discretization 
04/12/19 (TRUST)  Portability : Add the possibility to configure a baltik in 64 bit indices mode (experimental)
27/11/19 (TRUST)  Portability : orcus (DM2S) and plafrim (INRIA) clusters supported
--------------------------------------------------------------------------------------------------
Release notes version 1.8.0 : Enhancements, modifications and corrected bugs since version 1.7.9 :